--- a/project/douban/css/style.css
+++ b/project/douban/css/style.css
@@ -196,3 +196,20 @@ a {
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
 }
+
+.section main {
+    overflow: hidden;
+}
+
+.mod {
+    margin-bottom: 30px;
+}
+
+#anony-sns .albums {
+    float: left;
+    width: 350px;
+    margin-right: 30px;
+    color: #999;
+    font-size: 0;
+    letter-spacing: -0.31em;
+}
