--- a/wechatApp/douban-movie/pages/home/home.wxml
+++ b/wechatApp/douban-movie/pages/home/home.wxml
@@ -2,4 +2,17 @@
 <nav-bar title="首页" statusBarColor="#42BD55" navBarColor="#42BD55" titleColor="#fff"></nav-bar>
 <view>
     <mp-searchbar></mp-searchbar>
+    <view class="row">
+        <view class="title-wrapper">
+            <view class="title">影院热映</view>
+            <view class="title-right">
+                <view class="more">查看更多</view>
+                <view class="arrow"></view>
+            </view>
+        </view>
+        <scroll-view scroll-x="true" class="scroll-view__movie">
+            <!-- 组件  一部电影 -->
+            <movieitem class="item"></movieitem>
+        </scroll-view>
+    </view>
 </view>
