--- a/wechatApp/优乐购/pages/category/category.wxml
+++ b/wechatApp/优乐购/pages/category/category.wxml
@@ -1,2 +1,32 @@
 <!--pages/category/category.wxml-->
-<text>pages/category/category.wxml</text>
+<view class="cates">
+  <search></search>
+  <view class="cates_container">
+    <scroll-view scroll-y class="left_menu">
+      <view class="menu_item {{index===currentIndex?'active':''}}" wx:for="{{leftMenuList}}" wx:key="index" bindtap="handleItemTap" data-index="{{index}}">{{item}}</view>
+    </scroll-view>
+    <scroll-view scroll-top="{{scrolltop}}" scroll-y class="right_content">
+      <view class="goods_group" wx:for="{{rightContent}}" 
+      wx:for-item="item1"
+      wx:for-index="index1"
+      >
+        
+        <view class="goods_title">
+          <text class="delimiter">/</text>
+          <text class="title">{{item1.cat_name}}</text>
+          <text class="delimiter">/</text>
+        </view>
+        
+        <view class="goods_list">
+          <navigator wx:for="{{item1.children}}" 
+          wx:for-item="item2"
+          wx:for-index="index2"
+          wx:key="cat_id">
+          <image mode="widthFix" src="{{item2.cat_icon}}"></image>
+          <view class="goods_name">{{item2.cat_name}}</view>
+          </navigator>
+        </view>
+      </view>
+    </scroll-view>
+  </view>
+</view>
