--- a/wechatApp/优乐购/pages/category/category.wxml
+++ b/wechatApp/优乐购/pages/category/category.wxml
@@ -21,7 +21,8 @@
           <navigator wx:for="{{item1.children}}" 
           wx:for-item="item2"
           wx:for-index="index2"
-          wx:key="cat_id">
+          wx:key="cat_id"
+          url="/pages/goods_list/goods_list?cid={{item2.cat_id}}">
           <image mode="widthFix" src="{{item2.cat_icon}}"></image>
           <view class="goods_name">{{item2.cat_name}}</view>
           </navigator>
