--- a/wechatApp/优乐购/pages/goods_list/goods_list.wxml
+++ b/wechatApp/优乐购/pages/goods_list/goods_list.wxml
@@ -1,2 +1,19 @@
-<!--pages/goods_list/goods_list.wxml-->
-<text>pages/goods_list/goods_list.wxml</text>
+<search></search>
+<tabs tabs="{{tabs}}" bindtabsItemChange="handleItemTap">
+  <block wx:if="{{tabs[0].isActive}}">
+    <view class="first_tab">
+    <navigator class="goods_item" wx:for="{{goodsList}}" wx:key="goods_id"
+    url="/pages/goods_details/goods_details?goods_id={{item.goods_id}}">
+      <view class="goods_img_wrap">
+        <image mode="widthFix" src="{{item.goods_small_logo?item.goods_small_logo:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1605984056587&di=7c5d9e643deeea8746807bec8176c647&imgtype=0&src=http%3A%2F%2Fpic.vjshi.com%2F2018-01-14%2F4a913af02f9c1dc6fe0c3677664eb90d%2Fonline%2Fpuzzle.jpg%3Fx-oss-process%3Dstyle%2Fwatermark'}}"></image>
+      </view>
+      <view class="goods_info_wrap">
+        <view class="goods_name">{{item.goods_name}}</view>
+        <view class="goods_price">{{item.goods_price}}</view>
+      </view>
+    </navigator>
+    </view>
+  </block>
+  <block wx:elif="{{tabs[1].isActive}}">1</block>
+  <block wx:else>2</block>
+</tabs>
