--- a/VUE/vue-elema/src/common/stylus/variable.styl
+++ b/VUE/vue-elema/src/common/stylus/variable.styl
@@ -1,4 +1,7 @@
 $color-white = #ffffff
+$color-red = #f01414
+$color-green = #f00a0dc
+$color-blue = #f00b43c
 $color-background = rgba(7, 17, 27, 1)
 $color-background-s = rgba(7, 17, 27, 0.8)
 $color-background-ss = rgba(7, 17, 27, 0.5)
