--- a/VUE/vue-elema/src/common/stylus/variable.styl
+++ b/VUE/vue-elema/src/common/stylus/variable.styl
@@ -1,7 +1,7 @@
 $color-white = #ffffff
 $color-red = #f01414
-$color-green = #f00a0dc
-$color-blue = #f00b43c
+$color-blue = #00a0dc
+$color-green = #00b43c
 $color-background = rgba(7, 17, 27, 1)
 $color-background-s = rgba(7, 17, 27, 0.8)
 $color-background-ss = rgba(7, 17, 27, 0.5)
